--- a/art-gallery/index.html
+++ b/art-gallery/index.html
@@ -10,11 +10,7 @@
             href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
             rel="stylesheet"
         />
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-        />
-        <script src="https://kit.fontawesome.com/679a59d672.js" crossorigin="anonymous"></script>
+        <!-- TODO: Add FontAwesome CDN link and script -->
     </head>
     <body>
         <div id="root"></div>
